fix adversarial case

--- a/fast_exact_topk_tpu.ipynb
+++ b/fast_exact_topk_tpu.ipynb
@@ -4,8 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMJWfO5nwfdzFn5xQISrkxd",
-      "include_colab_link": true
+      "gpuType": "V6E1"
     },
     "kernelspec": {
       "name": "python3",
@@ -13,19 +12,10 @@
     },
     "language_info": {
       "name": "python"
-    }
+    },
+    "accelerator": "TPU"
   },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/oliverdutton/fast_exact_topk_tpu/blob/main/Fast_exact_topk_tpu.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
     {
       "cell_type": "code",
       "source": [
@@ -99,7 +89,8 @@
         "\n",
         "  block_token = logits_ref.shape[0]\n",
         "  for i in range(block_token):\n",
-        "    max_depth_ref[pl.program_id(0) * block_token + i] = -1\n",
+        "    # Worst case depth\n",
+        "    max_depth_ref[pl.program_id(0) * block_token + i] = k\n",
         "\n",
         "  # flag for termination of while loop\n",
         "  flag_ref[0] = 0\n",
@@ -147,7 +138,7 @@
         "        token_index = pl.program_id(0) * block_token + i\n",
         "        block_topk_depth = max_depth_ref[token_index]\n",
         "        max_depth_ref[token_index] = jnp.where(\n",
-        "            topk_all_present & (block_topk_depth == -1),\n",
+        "            topk_all_present & (block_topk_depth == k),\n",
         "            depth - 1,\n",
         "            block_topk_depth)\n",
         "\n",
@@ -254,7 +245,9 @@
         "vocab_size = 201088\n",
         "logits = jax.random.normal(jax.random.key(7), (num_queries, vocab_size), dtype=jnp.float32).astype(jnp.bfloat16)\n",
         "\n",
-        "#\n",
+        "# Slowest it can be, in practice this is astronomically unlikely\n",
+        "logits_worst_case = jnp.zeros((num_queries, vocab_size)).at[...,::128].set(1.)\n",
+        "\n",
         "all_values_match = (jax.lax.top_k(logits, 64)[0] == topk_optimized(logits, k=64)[0]).all()\n",
         "exact_index_match =  (jax.lax.top_k(logits, 64)[1] == topk_optimized(logits, k=64)[1]).mean()\n",
         "print(f'''All topk_logits match = {all_values_match}. Indices match at {exact_index_match:.0%} of the time,\n",
@@ -304,9 +297,13 @@
         "  jax.block_until_ready(matmul_and_topk_xla(x, w))\n",
         "  jax.block_until_ready(topk_xla(logits, k=k))\n",
         "\n",
-        "  # optimized tpu run\n",
+        "  # Optimized tpu run on random logits\n",
         "  jax.block_until_ready(topk_optimized(logits, k=k))\n",
         "\n",
+        "  # Optimized tpu on adversarial logits, approximately same runtime as exact top-k\n",
+        "  jax.block_until_ready(topk_optimized(logits_worst_case, k=k))\n",
+        "\n",
+        "  # Not exact. Runtime varies with recall, here run with default 0.95\n",
         "  jax.block_until_ready(approx_topk_xla(logits, k=k))\n",
         "\n",
         "\n",
