--- a/fast_exact_topk_tpu.ipynb
+++ b/fast_exact_topk_tpu.ipynb
@@ -19,10 +19,6 @@
     {
       "cell_type": "code",
       "source": [
-        "# !pip install tensorboard tensorboard-plugin-profile\n",
-        "# Pip install will require a restart, then comment the code\n",
-        "\n",
-        "\n",
         "import functools\n",
         "import math\n",
         "\n",
@@ -33,7 +29,13 @@
         "\n",
         "\n",
         "def blockwise_topk(\n",
-        "  logits, k, block_topk_val=None, block_topk_index=None, start_k=0, num_blocks=128, mode=\"jax\"\n",
+        "  logits,\n",
+        "  k,\n",
+        "  block_topk_val=None,\n",
+        "  block_topk_index=None,\n",
+        "  start_k=0,\n",
+        "  num_blocks=128,\n",
+        "  mode=\"jax\",\n",
         "):\n",
         "  \"\"\"Compute blockwise top-k.\"\"\"\n",
         "  ntokens = logits.shape[0]\n",
@@ -78,7 +80,9 @@
         "        # Nothing will be exchanged into the completed block topk, we just need\n",
         "        # to invalidate it from flowing downward. So we check if it's already\n",
         "        # found and invalidate if so.\n",
-        "        vals_carry = jnp.where(index_carry == block_topk_index[i], float(\"-inf\"), vals_carry)\n",
+        "        vals_carry = jnp.where(\n",
+        "          index_carry == block_topk_index[i], float(\"-inf\"), vals_carry\n",
+        "        )\n",
         "      else:\n",
         "        # Sinking sort\n",
         "        mask = vals_carry > block_topk_val[i]\n",
@@ -186,7 +190,9 @@
         "\n",
         "\n",
         "# Pallas function\n",
-        "def topk_blockwise_superset_pallas(logits, k, num_blocks=128, block_token=None, m_schedule=None):\n",
+        "def topk_blockwise_superset_pallas(\n",
+        "  logits, k, num_blocks=128, block_token=None, m_schedule=None\n",
+        "):\n",
         "  num_tokens, vocab_size = logits.shape\n",
         "  if block_token is None:\n",
         "    block_token = min(32, num_tokens)\n",
@@ -222,18 +228,20 @@
         "  )(logits)\n",
         "\n",
         "\n",
-        "def topk_on_filtered_subset(topk_val, topk_index, k):\n",
-        "  num_blocks = topk_val[0].shape[-1]\n",
-        "  topk_logits, local_indices = jax.lax.top_k(jnp.concatenate(topk_val, axis=-1), k=k)\n",
+        "def topk_on_filtered_subset(block_topm_val, block_topm_index, k):\n",
+        "  num_blocks = block_topm_val[0].shape[-1]\n",
+        "  topk_logits, local_indices = jax.lax.top_k(\n",
+        "    jnp.concatenate(block_topm_val, axis=-1), k=k\n",
+        "  )\n",
         "\n",
         "  @jax.vmap\n",
-        "  def unravel_indices(local_indices, topk_index):\n",
+        "  def unravel_indices(local_indices, block_topm_index):\n",
         "    m, col = jnp.unravel_index(local_indices, (k, num_blocks))\n",
-        "    row = jnp.stack(topk_index)[m, col]\n",
+        "    row = jnp.stack(block_topm_index)[m, col]\n",
         "    flat_index = row * num_blocks + col\n",
         "    return flat_index\n",
         "\n",
-        "  topk_flat_indices = unravel_indices(local_indices, topk_index)\n",
+        "  topk_flat_indices = unravel_indices(local_indices, block_topm_index)\n",
         "  return topk_logits, topk_flat_indices\n",
         "\n",
         "\n",
@@ -249,13 +257,16 @@
         ")\n",
         "def topk_optimized(\n",
         "  logits,\n",
-        "  k=64,\n",
-        "  num_blocks=128,\n",
-        "  m_stage1_schedule=None,\n",
-        "  m_stage2_schedule=None,\n",
-        "  block_token=None,\n",
+        "  k: int = 64,\n",
+        "  num_blocks: int = 128,\n",
+        "  m_stage1_schedule: tuple[int] | None = None,\n",
+        "  m_stage2_schedule: tuple[int] | None = None,\n",
+        "  block_token: int | None = None,\n",
         "):\n",
-        "  topk_val, topk_index, termination_m, _ = topk_blockwise_superset_pallas(\n",
+        "  \"\"\"Fast implementation of jax.lax.top_k on TPUs.\"\"\"\n",
+        "  if logits.ndim != 2:\n",
+        "    raise ValueError(\"Expected 2D input\")\n",
+        "  block_topm_val, block_topm_index, termination_m, _ = topk_blockwise_superset_pallas(\n",
         "    logits,\n",
         "    k=k,\n",
         "    block_token=block_token,\n",
@@ -269,20 +280,25 @@
         "  # in practice 8 nearly always sufficient\n",
         "  if m_stage2_schedule is None:\n",
         "    m_init = 8\n",
-        "    m_stage2_schedule = (\n",
-        "      [-1] + [m_init * (2**i) for i in range(int(math.log2(k // m_init)) + 1)] + [k]\n",
-        "    )\n",
+        "    m_stage2_schedule = [\n",
+        "      m_init * (2**i) for i in range(int(math.log2(k // m_init)) + 1)\n",
+        "    ]\n",
+        "  # Guarantee all cases covered\n",
+        "  m_stage2_schedule = (-1,) + tuple(m_stage2_schedule) + (k,)\n",
         "\n",
         "  # Buffer for output to be written in to\n",
         "  topk_logits, topk_flat_indices = jax.tree.map(\n",
-        "    jnp.zeros_like, topk_on_filtered_subset(topk_val[:1], topk_index[:1], k=k)\n",
+        "    jnp.zeros_like,\n",
+        "    topk_on_filtered_subset(block_topm_val[:1], block_topm_index[:1], k=k),\n",
         "  )\n",
         "  max_m = termination_m.max()\n",
         "  for lower_m, upper_m in zip(m_stage2_schedule, m_stage2_schedule[1:]):\n",
         "    topk_logits, topk_flat_indices = jax.lax.cond(\n",
         "      (max_m > lower_m) & (max_m <= upper_m),\n",
         "      lambda *args: topk_on_filtered_subset(\n",
-        "        topk_val=topk_val[:upper_m], topk_index=topk_index[:upper_m], k=k\n",
+        "        block_topm_val=block_topm_val[:upper_m],\n",
+        "        block_topm_index=block_topm_index[:upper_m],\n",
+        "        k=k,\n",
         "      ),\n",
         "      lambda *args: args,\n",
         "      topk_logits,\n",
@@ -293,7 +309,7 @@
       "metadata": {
         "id": "o0hYh1XJtlNN"
       },
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -318,10 +334,24 @@
         "theres high degeneracy and sorting is different. Having checked, it looks correct. Writing full checks would be tricky.''')"
       ],
       "metadata": {
-        "id": "zP2rOCeHVOB7"
+        "id": "zP2rOCeHVOB7",
+        "outputId": "6e3538e7-c688-45b2-e7cd-4ae44fe18c75",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "All topk_logits match = True. Indices match at 32% of the time,\n",
+            "this is only O(40%) [not 100%] as bf16 has only 2**16=65k possible values so in 200k vocab size\n",
+            "theres high degeneracy and sorting is different. Having checked, it looks correct. Writing full checks would be tricky.\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
