--- a/fast_exact_topk_tpu.ipynb
+++ b/fast_exact_topk_tpu.ipynb
@@ -81,7 +81,7 @@
         "         # to invalidate it from flowing downward. So we check if it's already\n",
         "         # found and invalidate if so.\n",
         "         bubble = jnp.where(\n",
-        "           bubble == block_topk_packed[j], 0, bubble\n",
+        "           bubble == block_topk_packed[j], jnp.iinfo(jnp.int32).min, bubble\n",
         "         )\n",
         "       else:\n",
         "         # Sinking bubble sort\n",
@@ -267,6 +267,7 @@
         "   m_schedule=m_stage1_schedule,\n",
         "   num_blocks=num_blocks,\n",
         " )\n",
+        " jax.debug.print('{} {} {}', termination_m, block_topm_val[::64], block_topm_index[::64])\n",
         "\n",
         " # top-k the smallest number of values we can, by taking max m required\n",
         " # such that all queries to have full top-k\n",
@@ -303,35 +304,45 @@
       "metadata": {
         "id": "o0hYh1XJtlNN"
       },
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "topk_optimized(logits, 64)"
+        "topk_optimized(logits, 64, m_stage1_schedule=())"
       ],
       "metadata": {
         "id": "pGIuHqypnWKT",
-        "outputId": "4875ee5d-e9cd-450a-c50b-15ed085b3a46",
+        "outputId": "cd6c60d6-a13f-4533-f114-5654ff6f86e0",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "(16, 128) (16, 201088) int32 int32\n",
-            "int32 int32\n",
-            "(16, 128) (16, 201088) int32 int32\n",
-            "int32 int32\n",
-            "(16, 128) (16, 201088) int32 int32\n",
-            "int32 int32\n",
-            "(16, 128) (16, 201088) int32 int32\n",
-            "int32 int32\n"
+            "[63 63 63 63 63 63 63 63 63 63 63 63 63 63 63 63 63 63 63 63 63 63 63 63\n",
+            " 63 63 63 63 63 63 63 63 63 63 63 63 63 63 63 63 63 63 63 63 63 63 63 63\n",
+            " 63 63 63 63 63 63 63 63 63 63 63 63 63 63 63 63 63 63 63 63 63 63 63 63\n",
+            " 63 63 63 63 63 63 63 63 63 63 63 63 63 63 63 63 63 63 63 63 63 63 63 63\n",
+            " 63 63 63 63 63 63 63 63 63 63 63 63 63 63 63 63 63 63 63 63 63 63 63 63\n",
+            " 63 63 63 63 63 63 63 63] [Array([[0, 0, 0, ..., 0, 0, 0],\n",
+            "       [0, 0, 0, ..., 0, 0, 0],\n",
+            "       [0, 0, 0, ..., 0, 0, 0],\n",
+            "       ...,\n",
+            "       [0, 0, 0, ..., 0, 0, 0],\n",
+            "       [0, 0, 0, ..., 0, 0, 0],\n",
+            "       [0, 0, 0, ..., 0, 0, 0]], dtype=bfloat16)] [Array([[0, 0, 0, ..., 0, 0, 0],\n",
+            "       [0, 0, 0, ..., 0, 0, 0],\n",
+            "       [0, 0, 0, ..., 0, 0, 0],\n",
+            "       ...,\n",
+            "       [0, 0, 0, ..., 0, 0, 0],\n",
+            "       [0, 0, 0, ..., 0, 0, 0],\n",
+            "       [0, 0, 0, ..., 0, 0, 0]], dtype=uint16)]\n"
           ]
         },
         {
@@ -355,7 +366,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 26
+          "execution_count": 17
         }
       ]
     },
@@ -372,6 +383,7 @@
         "logits = jax.lax.bitcast_convert_type(jax.random.randint(jax.random.key(7), (num_queries, vocab_size), dtype=dtype, minval=jnp.iinfo(dtype).min, maxval=jnp.iinfo(dtype).max), jnp.bfloat16)\n",
         "logits = jnp.where(jnp.isnan(logits) | (logits==jnp.inf), 0, logits) # remove the nans and +infs\n",
         "\n",
+        "logits_2 = jnp.ones_like(logits)\n",
         "# Adversarial logits, in practice this is astronomically unlikely\n",
         "logits_worst_case = jnp.zeros((num_queries, vocab_size)).at[...,::128].set(1.)\n",
         "\n",
@@ -383,25 +395,49 @@
       ],
       "metadata": {
         "id": "zP2rOCeHVOB7",
-        "outputId": "e4594ff1-ce7c-41f3-c1c9-4aadae5317b3",
+        "outputId": "5fdcc9f4-22ca-41ab-e5d4-60716d836a3b",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "(16, 128) (16, 201088) int32 int32\n",
-            "int32 int32\n",
-            "(16, 128) (16, 201088) int32 int32\n",
-            "int32 int32\n",
-            "(16, 128) (16, 201088) int32 int32\n",
-            "int32 int32\n",
-            "(16, 128) (16, 201088) int32 int32\n",
-            "int32 int32\n",
+            "[4 4 4 4 4 4 4 4 4 4 4 4 4 4 4 4 4 4 4 4 4 4 4 4 4 4 4 4 4 4 4 4 4 4 4 4 4\n",
+            " 4 4 4 4 4 4 4 4 4 4 4 4 4 4 4 4 4 4 4 4 4 4 4 4 4 4 4 4 4 4 4 4 4 4 4 4 4\n",
+            " 4 4 4 4 4 4 4 4 4 4 4 4 4 4 4 4 4 4 4 4 4 4 4 4 4 4 4 4 4 4 4 4 4 4 4 4 4\n",
+            " 4 4 4 4 4 4 4 4 4 4 4 4 4 4 4 4 4] [Array([[0, 0, 0, ..., 0, 0, 0],\n",
+            "       [0, 0, 0, ..., 0, 0, 0],\n",
+            "       [0, 0, 0, ..., 0, 0, 0],\n",
+            "       ...,\n",
+            "       [0, 0, 0, ..., 0, 0, 0],\n",
+            "       [0, 0, 0, ..., 0, 0, 0],\n",
+            "       [0, 0, 0, ..., 0, 0, 0]], dtype=bfloat16)] [Array([[0, 0, 0, ..., 0, 0, 0],\n",
+            "       [0, 0, 0, ..., 0, 0, 0],\n",
+            "       [0, 0, 0, ..., 0, 0, 0],\n",
+            "       ...,\n",
+            "       [0, 0, 0, ..., 0, 0, 0],\n",
+            "       [0, 0, 0, ..., 0, 0, 0],\n",
+            "       [0, 0, 0, ..., 0, 0, 0]], dtype=uint16)]\n",
+            "[4 4 4 4 4 4 4 4 4 4 4 4 4 4 4 4 4 4 4 4 4 4 4 4 4 4 4 4 4 4 4 4 4 4 4 4 4\n",
+            " 4 4 4 4 4 4 4 4 4 4 4 4 4 4 4 4 4 4 4 4 4 4 4 4 4 4 4 4 4 4 4 4 4 4 4 4 4\n",
+            " 4 4 4 4 4 4 4 4 4 4 4 4 4 4 4 4 4 4 4 4 4 4 4 4 4 4 4 4 4 4 4 4 4 4 4 4 4\n",
+            " 4 4 4 4 4 4 4 4 4 4 4 4 4 4 4 4 4] [Array([[0, 0, 0, ..., 0, 0, 0],\n",
+            "       [0, 0, 0, ..., 0, 0, 0],\n",
+            "       [0, 0, 0, ..., 0, 0, 0],\n",
+            "       ...,\n",
+            "       [0, 0, 0, ..., 0, 0, 0],\n",
+            "       [0, 0, 0, ..., 0, 0, 0],\n",
+            "       [0, 0, 0, ..., 0, 0, 0]], dtype=bfloat16)] [Array([[0, 0, 0, ..., 0, 0, 0],\n",
+            "       [0, 0, 0, ..., 0, 0, 0],\n",
+            "       [0, 0, 0, ..., 0, 0, 0],\n",
+            "       ...,\n",
+            "       [0, 0, 0, ..., 0, 0, 0],\n",
+            "       [0, 0, 0, ..., 0, 0, 0],\n",
+            "       [0, 0, 0, ..., 0, 0, 0]], dtype=uint16)]\n",
             "All topk_logits match = False. Indices match at 0% of the time,\n",
             "this is only O(40%) [not 100%] as bf16 has only 2**16=65k possible values so in 200k vocab size\n",
             "theres high degeneracy and sorting is different. Having checked, it looks correct. Writing full checks would be tricky.\n"
