Unrolled while loop and fast gather by making op sparse

--- a/fast_exact_topk_tpu.ipynb
+++ b/fast_exact_topk_tpu.ipynb
@@ -107,7 +107,7 @@
         "          jnp.where(v, index_carry, block_topk_index[i]) for v in (mask, ~mask)\n",
         "        )\n",
         "    return (block_topk_val, block_topk_index)\n",
-        "  return unrolled_fori_loop(logits.shape[-1] // num_blocks, while_body, (block_topk_val, block_topk_index), unroll=8\n",
+        "  return unrolled_fori_loop(logits.shape[-1] // num_blocks, while_body, (block_topk_val, block_topk_index), unroll=16\n",
         "  )\n",
         "  #(block_topk_val, block_topk_index) = jax.lax.fori_loop(\n",
         "  #0, logits.shape[-1] // num_blocks, while_body, (block_topk_val, block_topk_index)\n",
@@ -404,7 +404,9 @@
         "from glob import glob\n",
         "import json\n",
         "import pandas as pd\n",
-        "path = glob('/content/plugins/profile/*/**.json.gz')[0]\n",
+        "import os\n",
+        "path = sorted(glob('/content/plugins/profile/*/**.json.gz'), key=os.path.getmtime)[-1]\n",
+        "print(path)\n",
         "trace = json.load(gzip.open(path))\n",
         "df = pd.DataFrame(trace['traceEvents'])\n",
         "df = df[~df.name.isna()]\n",
@@ -413,22 +415,29 @@
       ],
       "metadata": {
         "id": "VAOC7EkVOc_I",
-        "outputId": "3b392b10-52c7-4134-924a-e1590b73b08e",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "8bf10d27-8cb4-4b28-cc42-f99173c7f84b"
       },
-      "execution_count": 7,
+      "execution_count": 13,
       "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "/content/plugins/profile/2025_10_01_18_35_12/25f91deb67f1.trace.json.gz\n"
+          ]
+        },
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "np.float64(82.6325)"
+              "np.float64(81.777422)"
             ]
           },
           "metadata": {},
-          "execution_count": 7
+          "execution_count": 13
         }
       ]
     },
@@ -436,10 +445,63 @@
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "lsKxCZp0WZ2K"
+        "id": "NoU56QUyC07c"
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "jax.lax.top_k(logits, k), topk_optimized(logits, k)"
+      ],
+      "metadata": {
+        "id": "lsKxCZp0WZ2K",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "19b22fe4-5fb2-42f5-b0f3-6fda0f6dad49"
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "([Array([[4.4375, 4.28125, 4.1875, ..., 3.42188, 3.40625, 3.40625],\n",
+              "         [4.59375, 4.46875, 4.25, ..., 3.45312, 3.4375, 3.4375],\n",
+              "         [4.65625, 4.53125, 4.15625, ..., 3.45312, 3.45312, 3.4375],\n",
+              "         ...,\n",
+              "         [4.5625, 4.5, 4.34375, ..., 3.39062, 3.39062, 3.39062],\n",
+              "         [4.34375, 4.3125, 4.09375, ..., 3.4375, 3.42188, 3.42188],\n",
+              "         [4.53125, 4.40625, 4.0625, ..., 3.40625, 3.40625, 3.40625]],      dtype=bfloat16),\n",
+              "  Array([[101171,  58512,  64088, ..., 141062,  15207, 116690],\n",
+              "         [ 39735,  63692, 112073, ..., 186850,  22206,  70731],\n",
+              "         [192142,  55046, 153857, ..., 137158, 142069,   7672],\n",
+              "         ...,\n",
+              "         [125137,  79273,  25911, ...,  20426,  66520,  99947],\n",
+              "         [ 56456, 126343,  96079, ..., 100138,  28483, 162640],\n",
+              "         [ 22603, 114276,  15680, ...,  89922,  91875,  92696]],      dtype=int32)],\n",
+              " (Array([[4.4375, 4.28125, 4.1875, ..., 3.42188, 3.40625, 3.40625],\n",
+              "         [4.59375, 4.46875, 4.25, ..., 3.45312, 3.4375, 3.4375],\n",
+              "         [4.65625, 4.53125, 4.15625, ..., 3.45312, 3.45312, 3.4375],\n",
+              "         ...,\n",
+              "         [4.5625, 4.5, 4.34375, ..., 3.39062, 3.39062, 3.39062],\n",
+              "         [4.34375, 4.3125, 4.09375, ..., 3.4375, 3.42188, 3.42188],\n",
+              "         [4.53125, 4.40625, 4.0625, ..., 3.40625, 3.40625, 3.40625]],      dtype=bfloat16),\n",
+              "  Array([[101171,  58512,  64088, ..., 141062,  15207, 140672],\n",
+              "         [ 39735,  63692, 112073, ...,  63073,  22206,  70731],\n",
+              "         [192142,  55046, 153857, ..., 142069, 137158,  87434],\n",
+              "         ...,\n",
+              "         [125137,  79273,  25911, ...,  20426, 152018,  66520],\n",
+              "         [ 56456, 126343,  96079, ..., 100138,  28483, 162640],\n",
+              "         [ 22603, 114276,  15680, ...,  89922,  91875, 192488]],      dtype=int32)))"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 9
+        }
+      ]
     }
   ]
 }
