--- a/fast_exact_topk_tpu.ipynb
+++ b/fast_exact_topk_tpu.ipynb
@@ -109,11 +109,6 @@
         "    return (block_topk_val, block_topk_index)\n",
         "  return unrolled_fori_loop(logits.shape[-1] // num_blocks, while_body, (block_topk_val, block_topk_index), unroll=16\n",
         "  )\n",
-        "  #(block_topk_val, block_topk_index) = jax.lax.fori_loop(\n",
-        "  #0, logits.shape[-1] // num_blocks, while_body, (block_topk_val, block_topk_index)\n",
-        "  #)\n",
-        "  #return block_topk_val, block_topk_index\n",
-        "\n",
         "\n",
         "# Pallas kernel scaffolding\n",
         "def topk_blockwise_superset_kernel(\n",
@@ -254,7 +249,7 @@
         "    )\n",
         "  out_ref[...] = out.astype(out_ref.dtype)\n",
         "\n",
-        "def dense_gather_pallas(val, index, out_dtype=None):\n",
+        "def dense_gather_pallas(val, index, out_dtype=None, num_lanes=128):\n",
         " if out_dtype is None:\n",
         "   out_dtype = val.dtype\n",
         " return pl.pallas_call(\n",
@@ -262,9 +257,9 @@
         "   out_shape=jax.ShapeDtypeStruct(index.shape, out_dtype),\n",
         "   in_specs=(\n",
         "     pl.BlockSpec((8,val.shape[1]), lambda i: (i,0)),\n",
-        "     pl.BlockSpec((8,128), lambda i:(i,0)),\n",
+        "     pl.BlockSpec((8, num_lanes), lambda i:(i,0)),\n",
         "   ),\n",
-        "   out_specs = pl.BlockSpec((8,128), lambda i: (i,0)),\n",
+        "   out_specs = pl.BlockSpec((8, num_lanes), lambda i: (i,0)),\n",
         "   grid = (val.shape[0] // 8,),\n",
         " )(val, index)\n",
         "\n",
@@ -275,25 +270,16 @@
         "    jnp.concatenate(block_topm_val, axis=-1), k=k\n",
         "  )\n",
         "\n",
-        "  @jax.vmap\n",
-        "  def unravel_indices(local_indices, block_topm_index):\n",
-        "    m, col = jnp.unravel_index(local_indices, (k, num_blocks))\n",
-        "    row = jnp.stack(block_topm_index)[m, col]\n",
-        "    flat_index = row * num_blocks + col\n",
-        "    return flat_index\n",
-        "\n",
         "  block_topm_flat_index = jnp.concatenate(\n",
-        "  [v * 128 + jax.lax.broadcasted_iota(v.dtype, v.shape, 1)\n",
+        "  [v * num_blocks + jax.lax.broadcasted_iota(v.dtype, v.shape, 1)\n",
         "  for v in block_topm_index], axis=-1)\n",
         "  topk_flat_indices = dense_gather_pallas(\n",
         "    block_topm_flat_index,\n",
         "    jnp.concatenate([\n",
         "      local_indices,\n",
-        "      jnp.zeros((local_indices.shape[0], 128 - k), local_indices.dtype)\n",
+        "      jnp.zeros((local_indices.shape[0], num_blocks - k), local_indices.dtype)\n",
         "    ], axis=-1),\n",
         "  )[:,:k]\n",
-        "\n",
-        "  #topk_flat_indices = unravel_indices(local_indices, block_topm_index)\n",
         "  return topk_logits, topk_flat_indices\n",
         "\n",
         "\n",
@@ -420,7 +406,7 @@
         },
         "outputId": "8bf10d27-8cb4-4b28-cc42-f99173c7f84b"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -462,7 +448,7 @@
         },
         "outputId": "19b22fe4-5fb2-42f5-b0f3-6fda0f6dad49"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
