Keep topm arrays as single array in output rather than list

--- a/fast_exact_topk_tpu.ipynb
+++ b/fast_exact_topk_tpu.ipynb
@@ -113,8 +113,8 @@
         "# Pallas kernel scaffolding\n",
         "def topk_blockwise_superset_kernel(\n",
         "  logits_ref,\n",
-        "  block_topm_val_refs,\n",
-        "  block_topm_index_refs,\n",
+        "  block_topm_val_ref,\n",
+        "  block_topm_index_ref,\n",
         "  max_m_ref,\n",
         "  flag_ref,\n",
         "  num_blocks: int = 128,\n",
@@ -123,10 +123,9 @@
         "):\n",
         "  '''Compute blockwise top-m's until they contain global top-k.'''\n",
         "  ### Initialize refs\n",
-        "  shape = block_topm_val_refs[0].shape\n",
-        "  for i in range(len(block_topm_val_refs)):\n",
-        "    block_topm_val_refs[i][...] = jnp.full(shape, float('-inf'), dtype=logits_ref.dtype)\n",
-        "    block_topm_index_refs[i][...] = jnp.full(shape, -1, dtype=jnp.int32)\n",
+        "  shape = block_topm_val_ref.shape\n",
+        "  block_topm_val_ref[...] = jnp.full(shape, float('-inf'), dtype=logits_ref.dtype)\n",
+        "  block_topm_index_ref[...] = jnp.full(shape, -1, dtype=jnp.int32)\n",
         "\n",
         "  block_token = logits_ref.shape[0]\n",
         "  for i in range(block_token):\n",
@@ -150,19 +149,17 @@
         "        logits_ref,\n",
         "        # bf16, bf16 -> i1 mask not supported on v5e so we cast to f32\n",
         "        # TODO: check v6e, bf16 comparitor and make model specific\n",
-        "        block_topk_val=jax.tree.map(\n",
-        "          lambda ref: ref[...].astype(jnp.float32), block_topm_val_refs\n",
-        "        ),\n",
-        "        block_topk_index=jax.tree.map(lambda ref: ref[...], block_topm_index_refs),\n",
+        "        block_topk_val=[block_topm_val_ref[:,pl.dslice(i*num_blocks, num_blocks)].astype(jnp.float32) for i in range(m)],\n",
+        "        block_topk_index=[block_topm_index_ref[:,pl.dslice(i*num_blocks, num_blocks)] for i in range(m)],\n",
         "        k=m,\n",
         "        start_k=completed_m,\n",
         "        mode='pallas',\n",
         "      )\n",
         "\n",
         "      for i in range(completed_m, m):\n",
-        "        block_topm_val_refs[i][...] = topk_vals[i].astype(block_topm_val_refs[i].dtype)\n",
-        "        block_topm_index_refs[i][...] = topk_indexs[i].astype(\n",
-        "          block_topm_index_refs[i].dtype\n",
+        "        block_topm_val_ref[:,pl.dslice(i*num_blocks, num_blocks)] = topk_vals[i].astype(block_topm_val_ref.dtype)\n",
+        "        block_topm_index_ref[:,pl.dslice(i*num_blocks,num_blocks)] = topk_indexs[i].astype(\n",
+        "          block_topm_index_ref.dtype\n",
         "        )\n",
         "\n",
         "      # Stopping criterion check\n",
@@ -207,14 +204,14 @@
         "    raise ValueError('token block size must be a multiple of num tokens')\n",
         "\n",
         "  out_shape = (\n",
-        "    [jax.ShapeDtypeStruct((num_tokens, num_blocks), logits.dtype) for i in range(k)],\n",
+        "    jax.ShapeDtypeStruct((num_tokens, k*num_blocks), logits.dtype),\n",
         "    # uint16 fits vocab size of up to 2**16 * 128 = 8.4M. But not used to avoid unforseen issues.\n",
-        "    [jax.ShapeDtypeStruct((num_tokens, num_blocks), jnp.int32) for i in range(k)],\n",
+        "    jax.ShapeDtypeStruct((num_tokens, k*num_blocks), jnp.int32),\n",
         "    jax.ShapeDtypeStruct((num_tokens,), jnp.int32),\n",
         "    jax.ShapeDtypeStruct((1,), jnp.int32),  # scratch for termination flag\n",
         "  )\n",
         "  out_specs = jax.tree.map(\n",
-        "    lambda _: pl.BlockSpec((block_token, num_blocks), lambda i: (i, 0)), out_shape[:2]\n",
+        "    lambda _: pl.BlockSpec((block_token, k*num_blocks), lambda i: (i, 0)), out_shape[:2]\n",
         "  )\n",
         "  out_specs += (\n",
         "    pl.BlockSpec(memory_space=pltpu.SMEM),\n",
@@ -265,14 +262,12 @@
         "\n",
         "\n",
         "def topk_on_filtered_subset(block_topm_val, block_topm_index, k):\n",
-        "  num_blocks = block_topm_val[0].shape[-1]\n",
+        "  num_blocks = 128\n",
         "  topk_logits, local_indices = jax.lax.top_k(\n",
-        "    jnp.concatenate(block_topm_val, axis=-1), k=k\n",
+        "    block_topm_val, k=k\n",
         "  )\n",
         "\n",
-        "  block_topm_flat_index = jnp.concatenate(\n",
-        "  [v * num_blocks + jax.lax.broadcasted_iota(v.dtype, v.shape, 1)\n",
-        "  for v in block_topm_index], axis=-1)\n",
+        "  block_topm_flat_index = (block_topm_index * num_blocks) + (jax.lax.broadcasted_iota(block_topm_index.dtype, block_topm_index.shape, 1) % num_blocks)\n",
         "  topk_flat_indices = dense_gather_pallas(\n",
         "    block_topm_flat_index,\n",
         "    jnp.concatenate([\n",
@@ -327,15 +322,15 @@
         "  # Buffer for output to be written in to\n",
         "  topk_logits, topk_flat_indices = jax.tree.map(\n",
         "    jnp.zeros_like,\n",
-        "    topk_on_filtered_subset(block_topm_val[:1], block_topm_index[:1], k=k),\n",
+        "    topk_on_filtered_subset(block_topm_val, block_topm_index, k=k),\n",
         "  )\n",
         "  max_m = termination_m.max()\n",
         "  for lower_m, upper_m in zip(m_stage2_schedule, m_stage2_schedule[1:]):\n",
         "    topk_logits, topk_flat_indices = jax.lax.cond(\n",
         "      (max_m > lower_m) & (max_m <= upper_m),\n",
         "      lambda *args: topk_on_filtered_subset(\n",
-        "        block_topm_val=block_topm_val[:upper_m],\n",
-        "        block_topm_index=block_topm_index[:upper_m],\n",
+        "        block_topm_val=block_topm_val[:,:num_blocks*upper_m],\n",
+        "        block_topm_index=block_topm_index[:num_blocks*upper_m],\n",
         "        k=k,\n",
         "      ),\n",
         "      lambda *args: args,\n",
@@ -404,26 +399,34 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "8bf10d27-8cb4-4b28-cc42-f99173c7f84b"
+        "outputId": "e58c0b30-6340-48e0-fee9-ab373aa2dcd0"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/usr/local/lib/python3.12/dist-packages/jax/_src/cloud_tpu_init.py:82: UserWarning: Transparent hugepages are not enabled. TPU runtime startup and shutdown time should be significantly improved on TPU v5e and newer. If not already set, you may need to enable transparent hugepages in your VM image (sudo sh -c \"echo always > /sys/kernel/mm/transparent_hugepage/enabled\")\n",
+            "  warnings.warn(\n"
+          ]
+        },
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "/content/plugins/profile/2025_10_01_18_35_12/25f91deb67f1.trace.json.gz\n"
+            "/content/plugins/profile/2025_10_02_00_36_03/c718fa664a9c.trace.json.gz\n"
           ]
         },
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "np.float64(81.777422)"
+              "np.float64(76.451172)"
             ]
           },
           "metadata": {},
-          "execution_count": 13
+          "execution_count": 1
         }
       ]
     },
