Optimize block size (now while loop for top-m unrolled)

--- a/fast_exact_topk_tpu.ipynb
+++ b/fast_exact_topk_tpu.ipynb
@@ -369,7 +369,7 @@
         "  jax.block_until_ready(topk_xla(logits, k=k))\n",
         "\n",
         "  # Optimized tpu run on random logits\n",
-        "  jax.block_until_ready(topk_optimized(logits, k=k))\n",
+        "  jax.block_until_ready(topk_optimized(logits, k=k, block_token=16))\n",
         "\n",
         "  # Not exact. Runtime varies with recall, here run with default 0.95\n",
         "  jax.block_until_ready(approx_topk_xla(logits, k=k))\n",
@@ -399,7 +399,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "e58c0b30-6340-48e0-fee9-ab373aa2dcd0"
+        "outputId": "7a2c6a6b-3a35-4dbf-ea9c-271c3ad0ac12"
       },
       "execution_count": 1,
       "outputs": [
@@ -415,14 +415,14 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "/content/plugins/profile/2025_10_02_00_36_03/c718fa664a9c.trace.json.gz\n"
+            "/content/plugins/profile/2025_10_02_03_41_21/defd12d10c20.trace.json.gz\n"
           ]
         },
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "np.float64(76.451172)"
+              "np.float64(67.708906)"
             ]
           },
           "metadata": {},
@@ -449,9 +449,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "19b22fe4-5fb2-42f5-b0f3-6fda0f6dad49"
+        "outputId": "fbef6f02-effb-43e1-939f-dd6ec4e3b258"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -488,7 +488,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 9
+          "execution_count": 2
         }
       ]
     }
